# memeland

./: .gitignore  main.py  pyproject.toml
bot/: account.py  api.py  auth.py  config.py  filters.py  follower.py  logger.py  output.py  paths.py  process.py  scripts.py  update_info.py  utils.py
config/.default/: config.toml
